Improved the aside social media buttons on each page by writing better codes for them and changed positions of some of the content on the homepage.

--- a/donate.html
+++ b/donate.html
@@ -835,12 +835,14 @@
     </article>
 
     <aside>
-        <div class="social-media-button d-none d-sm-block">
-            <li class="calculator-aside"><div class="sideCalculator" id="calcBtn"><i class="fa fa-calculator"></i></div></li>
-            <li class="facebook-aside"><a href="http://www.facebook.com" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a></li>
-            <li class="twitter-aside"><a href="http://www.twitter.com" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a></li>
-            <li class="youtube-aside"><a href="http://www.youtube.com" target="_blank" class="youtube"><i class="fab fa-youtube"></i></a></li>
-            <li class="instagram-aside"><a href="http://www.instagram.com" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a></li>
+        <div>
+            <ul class="social-media-button d-none d-sm-block">
+                <li class="calculator-aside"><div class="sideCalculator" id="calcBtn"><i class="fa fa-calculator"></i></div></li>
+                <li class="facebook-aside"><a href="http://www.facebook.com" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a></li>
+                <li class="twitter-aside"><a href="http://www.twitter.com" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a></li>
+                <li class="youtube-aside"><a href="http://www.youtube.com" target="_blank" class="youtube"><i class="fab fa-youtube"></i></a></li>
+                <li class="instagram-aside"><a href="http://www.instagram.com" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a></li>
+            </ul>
         </div>
     </aside>
 
