--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div id="textEffect">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-11 col-md-6">
+                        <div class="col-11 col-xl-8">
                             <div class="top-section textHP1 text-center">
                                 <h1 class="underline header">Help People In Need</h1>
                                 <p class="text">Around 795 million people in the world do not have enough food, in order to live a healthy and active life. However, you can help solving this problem by donating to save lives and help to change a part of this world!
@@ -68,15 +68,9 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-md-6 d-none d-md-block d-lg-none">
-                            <div class="top-section-counter-BG text-center textHP1">
-                                <div id="counter2"></div>
-                                <div id="death2"></div>
-                            </div>
-                        </div>
                     </div>
                     <div class="row">
-                        <div class="col-11 col-md-6 d-md-none d-lg-block">
+                        <div class="col-11 col-xl-8">
                             <div class="top-section-counter-BG text-center textHP1">
                                 <div id="counter"></div>
                                 <div id="death"></div>
@@ -136,7 +130,7 @@
                             <p class="textGDP">
                                 The GDP per capital and GDP growth play huge roles in a country's economic status, as they show measurements of a country's standard of living, how prosperous the citizens of a country feel, and how fast a country's economy is growing.
                                 <span id="dots2" class="dots">...</span><span id="more2" class="more">These are very low
-                            in many countries as there are multiple problems, such as the status of their labour, lands, capital and enterprises. For statistics, please click <a href="statistics.html">here!</a></span>
+                                in many countries as there are multiple problems, such as the status of their labour, lands, capital and enterprises. For statistics, please click <a href="statistics.html">here!</a></span>
                                 <button id="readBtn2" class="readBtn">Read More</button>
                             </p>
 
@@ -152,12 +146,12 @@
         <!--Section 5: Please Donate-->
 
         <div class="hpimg-5">
-            <div class="container-fluid">
+            <div class="container">
                 <div class="row">
-                    <div class="col-3">
+                    <div class="col-12">
                         <div class="textHP2" id="textEffect5">
                             <h2 class="header">Please Donate!</h2>
-                            <a href="donate.html" value="donateButtonHP" class="btn btn-primary donateButtonStyleHP">Donate here</a>
+                            <a href="donate.html" class="btn btn-primary donateButtonStyleHP">Donate here</a>
                         </div>
                     </div>
                 </div>
