--- a/map.html
+++ b/map.html
@@ -48,7 +48,7 @@
         <!--Main Header and Description of the Web Page-->
         <div class="container">
             <div class="row">
-                <div class="mapInstruction text-center"">
+                <div class="mapInstruction text-center">
                     <h1 class="header">Landmap</h1>
                     <h2>Use the map below, in order to have a general overview of what countries require help and find quick information about them by clicking on the markers.</h2>
                 </div>
@@ -59,11 +59,13 @@
     </article>
 
     <aside>
-        <div class="social-media-button d-none d-sm-block">
-            <li class="facebook-aside"><a href="http://www.facebook.com" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a></li>
-            <li class="twitter-aside"><a href="http://www.twitter.com" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a></li>
-            <li class="youtube-aside"><a href="http://www.youtube.com" target="_blank" class="youtube"><i class="fab fa-youtube"></i></a></li>
-            <li class="instagram-aside"><a href="http://www.instagram.com" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a></li>
+        <div>
+            <ul class="social-media-button d-none d-sm-block">
+                <li class="facebook-aside"><a href="http://www.facebook.com" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a></li>
+                <li class="twitter-aside"><a href="http://www.twitter.com" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a></li>
+                <li class="youtube-aside"><a href="http://www.youtube.com" target="_blank" class="youtube"><i class="fab fa-youtube"></i></a></li>
+                <li class="instagram-aside"><a href="http://www.instagram.com" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a></li>
+            </ul>
         </div>
     </aside>
 
