Improved some of the styles on the homepage and the 'Statistics' page.

--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
                     <div class="col-12">
                         <div class="textHP2" id="textEffect5">
                             <h2 class="header">Please Donate!</h2>
+                            <p class="text">You could save someone, now!</p>
                             <a href="donate.html" class="btn btn-primary donateButtonStyleHP">Donate here</a>
                         </div>
                     </div>
