Improved some of the designs on the homepage, 'Donate' page and in the footers.

--- a/map.html
+++ b/map.html
@@ -13,7 +13,7 @@
 
 <body id="bodyColor">
     <header>
-        <nav class="navbar navbar-expand-sm navbar-light">
+        <nav class="navbar navbar-expand-sm navbar-light fixed-top">
 
             <!--<div class="collapse navbar-collapse" id="navbarSupportedContent">-->
             <a href="index.html" class="navbar-brand navBrandColor">Charity Base</a>
