--- a/statistics.html
+++ b/statistics.html
@@ -78,7 +78,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="death-seconds">
+                    <div class="death-seconds" id="deathCounterText">
                         <p>It is estimated that two children die every second!</p>
                     </div>
                 </div>
@@ -327,12 +327,12 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-    <script type="text/javascript" src="assets/js/d3.min.js"></script>
-    <script type="text/javascript" src="assets/js/crossfilter.min.js"></script>
-    <script type="text/javascript" src="assets/js/dc.min.js"></script>
-    <script type="text/javascript" src="assets/js/queue.min.js"></script>
+    <script src="assets/js/d3.min.js"></script>
+    <script src="assets/js/crossfilter.min.js"></script>
+    <script src="assets/js/dc.min.js"></script>
+    <script src="assets/js/queue.min.js"></script>
 
-    <script type="text/javascript" src="assets/js/statistics.js"></script>
+    <script src="assets/js/statistics.js"></script>
 
 </body>
 
