Added more comments to codes and wrote more texts in the README.md file.

--- a/map.html
+++ b/map.html
@@ -73,14 +73,14 @@
     <footer id="footer">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-6 text-center">
+                <div class="col-12 col-sm-6 text-center">
                     <h2>Contact Me</h2>
                     <ul class="footer-list">
                         <li>Phone number: 1234</li>
                         <li><a href="contact.html" class="footer-link">Send Me a Message</a></li>
                     </ul>
                 </div>
-                <div class="col-6 text-center">
+                <div class="col-12 col-sm-6 text-center">
                     <h2>Find out how to donate</h2>
                     <ul class="footer-list">
                         <li><a href="dontate.html" class="footer-link">Donate</a></li>
