Redesigned the footers and the contact.html file, deleted unnecessary folders and files and corrected the JavaScript code for the calculator.

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 </head>
 
 
-<body>
+<body class="contactBG">
     <header>
         <nav class="navbar navbar-expand-sm  navbar-light fixed-top">
 
@@ -58,10 +58,10 @@
             </div>
         </nav>
     </header>
-    <article class="contactBG">
-        <div class="container text-center contactHeading">
+    <article>
+        <div class="container text-center contactWrap">
             <div class="row">
-                <div class="col-12 col-md-5 col-lg-4 contactMeBulletPoints" >
+                <div class="col-12 contactMeBulletPoints" >
                     <h1 class="header">Contact Me!</h1>
                     <div class="d-block d-md-none">
                         <h2 class="header2">For Any Requests or Questions, Please Fill In the Form, Below.</h2>
@@ -73,8 +73,9 @@
                         <li>Receive a reply in under 24 hours</li>
                     </ul>
                 </div>
-
-                <div class="col-12 col-md-7 col-lg-8">
+            </div>
+            <div class="row">
+                <div class="col-12">
                     <div class="contactForm" id="contact_form">
                         <form>
                             <div class="row">
@@ -123,14 +124,12 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 col-sm-6 text-center">
-                    <h2>Contact Me</h2>
                     <ul class="footer-list">
                         <li>Phone number: 1234</li>
                         <li><a href="contact.html" class="footer-link">Send Me a Message</a></li>
                     </ul>
                 </div>
                 <div class="col-12 col-sm-6 text-center">
-                    <h2>Find out how to donate</h2>
                     <ul class="footer-list">
                         <li><a href="dontate.html" class="footer-link">Donate</a></li>
                         <li><a href="map.html" class="footer-link">Map</a></li>
