Made a few changes and adjustments in the design of the website.

--- a/index.html
+++ b/index.html
@@ -178,13 +178,13 @@
             <div class="row">
                 <div class="col-12 col-sm-6 text-center">
                     <ul class="footer-list">
-                        <li>Phone number: 1234</li>
+                        <li><a href="tel: 12 3456 7890" class="footer-link">Phone number: 12 4567 7890</li>
                         <li><a href="contact.html" class="footer-link">Send Me a Message</a></li>
                     </ul>
                 </div>
                 <div class="col-12 col-sm-6 text-center">
                     <ul class="footer-list">
-                        <li><a href="dontate.html" class="footer-link">Donate</a></li>
+                        <li><a href="donate.html" class="footer-link">Donate</a></li>
                         <li><a href="map.html" class="footer-link">Map</a></li>
                     </ul>
                 </div>
