--- a/map.html
+++ b/map.html
@@ -46,6 +46,7 @@
 
     <article>
         <!--Main Header and Description of the Web Page-->
+        <section>
         <div class="container">
             <div class="row">
                 <div class="mapInstruction text-center">
@@ -55,7 +56,9 @@
             </div>
         </div>
         <!--World Map-->
-        <div id="map"></div>
+        <section>
+            <div id="map"></div>
+        </section>
     </article>
 
     <aside>
@@ -75,13 +78,13 @@
             <div class="row">
                 <div class="col-12 col-sm-6 text-center">
                     <ul class="footer-list">
-                        <li>Phone number: 1234</li>
+                        <li><a href="tel: 12 3456 7890" class="footer-link">Phone number: 12 4567 7890</li>
                         <li><a href="contact.html" class="footer-link">Send Me a Message</a></li>
                     </ul>
                 </div>
                 <div class="col-12 col-sm-6 text-center">
                     <ul class="footer-list">
-                        <li><a href="dontate.html" class="footer-link">Donate</a></li>
+                        <li><a href="donate.html" class="footer-link">Donate</a></li>
                         <li><a href="map.html" class="footer-link">Map</a></li>
                     </ul>
                 </div>
