Improved the design of the homepage.

--- a/statistics.html
+++ b/statistics.html
@@ -60,11 +60,11 @@
 	<!--Main Header-->
 
 	<article>
-		<section>
+		<section id="statsBox">
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-12">
-						<div id="statsBox">
+						<div>
 							<h1 id="stats-banner-heading">Statistics</h1>
 
 							<div class="theCounters">
@@ -83,6 +83,7 @@
 				</div>
 			</div>
 		</section>
+
 		<!--Short Notice about the Interactive Charts-->
 		<section>
 			<div class="container">
