--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-	 crossorigin="anonymous">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-	 crossorigin="anonymous">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+		integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+		integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
 	<!--Load hover.css-->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css"
+		type="text/css" />
 
 	<!--Load CSS File-->
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css">
@@ -30,192 +31,216 @@
 
             <span class="navbar-toggler-icon"></span></button>
 
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a href="index.html" class="nav-link hvr-shutter-out-vertical">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="map.html" class="nav-link hvr-shutter-out-vertical">Map</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="statistics.html" class="nav-link hvr-shutter-out-vertical">Statistics</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="donate.html" class="nav-link hvr-shutter-out-vertical">Donate</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="contact.html" class="nav-link hvr-shutter-out-vertical">Contacts</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-    <article>
+			<div class="collapse navbar-collapse" id="navbarNavDropdown">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item active">
+						<a href="index.html" class="nav-link hvr-shutter-out-vertical">Home</a>
+					</li>
+					<li class="nav-item">
+						<a href="map.html" class="nav-link hvr-shutter-out-vertical">Map</a>
+					</li>
+					<li class="nav-item">
+						<a href="statistics.html" class="nav-link hvr-shutter-out-vertical">Statistics</a>
+					</li>
+					<li class="nav-item">
+						<a href="donate.html" class="nav-link hvr-shutter-out-vertical">Donate</a>
+					</li>
+					<li class="nav-item">
+						<a href="contact.html" class="nav-link hvr-shutter-out-vertical">Contacts</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+	</header>
+	<article>
 
-        <!--Section 1: Title Page-->
+		<!--Section 1: Title Page-->
 
-        <div class="hpimg-1">
-            <div id="textEffect">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-11 col-xl-8">
-                            <div class="top-section textHP1 text-center">
-                                <h1 class="underline header">Help People In Need</h1>
-                                <p class="text">Around 795 million people in the world do not have enough food, in order to live a healthy and active life. However, you can help solving this problem by donating to save lives and help to change a part of this world!
-                                    <br />
-                                    <a href="donate.html" class="btn donateButtonStyleHP">Donate here</a>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-11 col-xl-8">
-                            <div class="top-section-counter-BG text-center textHP1">
-                                <div id="counter"></div>
-                                <div id="death"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+		<section class="hpimg-1">
+			<div id="textEffect">
+				<div class="container-fluid">
+					<div class="row">
+						<div class="col-11 col-xl-8">
+							<div class="top-section textHP1 text-center">
+								<h1 class="underline header">Help People In Need</h1>
+								<p class="text">Around 795 million people in the world do not have enough food, in order
+									to live a healthy and active life. However, you can help solving this problem by
+									donating to save lives and help to change a part of this world!
+									<br />
+									<a href="donate.html" class="btn donateButtonStyleHP">Donate here</a>
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-11 col-xl-8">
+							<div class="top-section-counter-BG text-center textHP1">
+								<div id="counter"></div>
+								<div id="death"></div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 
-        <!--Section 2: Poverty Trap-->
 
-        <div class="hpimg-4">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-sm-12 text-center">
-                        <section class="section3" id="textEffect2">
-                            <h2 class="header">The Poverty Trap</h2>
-                            <p class="text2 ">When a country does not have a enough capital, i.e. machinary, tools and buildings, people strive to produce goods and services. Therefore, their economic development and growth decreases and it becomes difficult to gain the
-                                capital that they require. As a result, they get trapped into a poverty cycle. However, you could change lives today by donating! Find more information, <a href="statistics.html">here!</a>
-                            </p>
-                        </section>
-                    </div>
-                </div>
-            </div>
-        </div>
+		<!--Section 2: Poverty Trap-->
 
-        <!--Section 3: The Struggle for Food and Health Care-->
+		<section class="hpimg-4">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-sm-12 text-center">
+						<section class="section3 scroll-effect" id="textEffect2">
+							<h2 class="header">The Poverty Trap</h2>
+							<p class="text2 ">When a country does not have a enough capital, i.e. machinary, tools and
+								buildings, people strive to produce goods and services. Therefore, their economic
+								development and growth decreases and it becomes difficult to gain the
+								capital that they require. As a result, they get trapped into a poverty cycle. However,
+								you could change lives today by donating! Find more information, <a
+									href="statistics.html">here!</a>
+							</p>
+						</section>
+					</div>
+				</div>
+			</div>
+		</section>
 
-        <div class="hpimg-2">
-            <div class="container-fluid">
-                <div class="row" id="textEffect3">
-                    <div class="col-sm-12 text-center">
-                        <section class="section">
-                            <h2 class="header">The Struggle for Food and Health Care</h2>
-                            <p class="text2">In some countries, a single plate of food can even cost up to around 70$ or even about 200$. About 45% children, under the age of five, are caused to pass away, due to malnutrition. In many countries, people live in slums,
-                                ran away, suffer mentally and physically from wars, got affected by natural disasters, etc. <span id="dots1" class="dots">...</span><span id="more1" class="more">So, they do not have much access to nutritions, medications or shelter and require various
+		<!--Section 3: The Struggle for Food and Health Care-->
+
+		<section class="hpimg-2">
+			<div class="container-fluid">
+				<div class="row" id="textEffect3">
+					<div class="col-sm-12 text-center">
+						<section class="section scroll-effect">
+							<h2 class="header">The Struggle for Food and Health Care</h2>
+							<p class="text2">In some countries, a single plate of food can even cost up to around 70$ or
+								even about 200$. About 45% children, under the age of five, are caused to pass away, due
+								to malnutrition. In many countries, people live in slums,
+								ran away, suffer mentally and physically from wars, got affected by natural disasters,
+								etc. <span id="dots1" class="dots">...</span><span id="more1" class="more">So, they do not have much access to nutritions, medications or shelter and require various
                                 kinds of support! For statistics, please click <a href="statistics.html">here!</a>
                             </span>
-                            <button id="readBtn1" class="readBtn">Read More</button></p>
-                        </section>
-                    </div>
-                </div>
-            </div>
-        </div>
+								<button id="readBtn1" class="readBtn">Read More</button></p>
+						</section>
+					</div>
+				</div>
+			</div>
+		</section>
 
-        <!--Section 4: Lowest Economic Outputs-->
+		<!--Section 4: Lowest Economic Outputs-->
 
-        <div class="hpimg-3">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-sm-12 mx-auto text-center">
-                        <section class="section2" id="textEffect4">
-                            <h2 class="headerGDP">
-                                Lowest Economic Outputs
-                            </h2>
-                            <p class="textGDP">
-                                The GDP per capital and GDP growth play huge roles in a country's economic status, as they show measurements of a country's standard of living, how prosperous the citizens of a country feel, and how fast a country's economy is growing.
-                                <span id="dots2" class="dots">...</span><span id="more2" class="more">These are very low
+		<section class="hpimg-3">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-sm-12 mx-auto text-center">
+						<section class="section2 scroll-effect" id="textEffect4">
+							<h2 class="headerGDP">
+								Lowest Economic Outputs
+							</h2>
+							<p class="textGDP">
+								The GDP per capital and GDP growth play huge roles in a country's economic status, as
+								they show measurements of a country's standard of living, how prosperous the citizens of
+								a country feel, and how fast a country's economy is growing.
+								<span id="dots2" class="dots">...</span><span id="more2" class="more">These are very low
                                 in many countries as there are multiple problems, such as the status of their labour, lands, capital and enterprises. For statistics, please click <a href="statistics.html">here!</a></span>
-                                <button id="readBtn2" class="readBtn">Read More</button>
-                            </p>
+								<button id="readBtn2" class="readBtn">Read More</button>
+							</p>
 
-                            <blockquote class="MotherTeresaQuote text-center">
-                                "It is not how much we give, but how much love we put into giving." <br />- Mother Teresa
+							<blockquote class="MotherTeresaQuote text-center">
+								"It is not how much we give, but how much love we put into giving." <br />- Mother Teresa
                             </blockquote>
-                        </section>
-                    </div>
-                </div>
-            </div>
-        </div>
+						</section>
+					</div>
+				</div>
+			</div>
+		</section>
 
-        <!--Section 5: Please Donate-->
+		<!--Section 5: Please Donate-->
 
-        <div class="hpimg-5">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12">
-                        <div class="textHP2" id="textEffect5">
-                            <h2 class="header">Please Donate!</h2>
-                            <p class="text">You could save someone, now!</p>
-                            <a href="donate.html" class="btn btn-primary donateButtonStyleHP">Donate here</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </article>
-
-
-    <aside>
-        <div>
-            <ul class="social-media-button d-none d-sm-block">
-                <li class="facebook-aside"><a href="http://www.facebook.com" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a></li>
-                <li class="twitter-aside"><a href="http://www.twitter.com" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a></li>
-                <li class="youtube-aside"><a href="http://www.youtube.com" target="_blank" class="youtube"><i class="fab fa-youtube"></i></a></li>
-                <li class="instagram-aside"><a href="http://www.instagram.com" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a></li>
-            </ul>
-        </div>
-    </aside>
+		<section class="hpimg-5">
+			<div class="container">
+				<div class="row">
+					<div class="col-12">
+						<div class="textHP2 scroll-effect" id="textEffect5">
+							<h2 class="header">Please Donate!</h2>
+							<p class="text">You could save someone, now!</p>
+							<a href="donate.html" class="btn btn-primary donateButtonStyleHP">Donate here</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+	</article>
 
 
-    <footer id="footer">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-12 col-sm-6 text-center">
-                    <ul class="footer-list">
-                        <li><a href="tel: 12 3456 7890" class="footer-link">Phone number: 12 4567 7890</li>
-                        <li><a href="contact.html" class="footer-link">Send Me a Message</a></li>
-                    </ul>
-                </div>
-                <div class="col-12 col-sm-6 text-center">
-                    <ul class="footer-list">
-                        <li><a href="donate.html" class="footer-link">Donate</a></li>
-                        <li><a href="map.html" class="footer-link">Map</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-
-        <div class="d-block d-sm-none">
-            <hr>
-
-            <!--Footer Social Media Icons-->
-
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-12">
-                        <ul class="social-media-icons-footer">
-                            <li class="facebook-footer"><a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                            <li class="twitter-footer"><a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                            <li class="youtube-footer"><a href="http://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
-                            <li class="instagram-footer"><a href="http://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
+	<aside>
+		<div>
+			<ul class="social-media-button d-none d-sm-block">
+				<li class="facebook-aside"><a href="http://www.facebook.com" target="_blank"
+						class="facebook"><i class="fab fa-facebook"></i></a></li>
+				<li class="twitter-aside"><a href="http://www.twitter.com" target="_blank"
+						class="twitter"><i class="fab fa-twitter"></i></a></li>
+				<li class="youtube-aside"><a href="http://www.youtube.com" target="_blank"
+						class="youtube"><i class="fab fa-youtube"></i></a></li>
+				<li class="instagram-aside"><a href="http://www.instagram.com" target="_blank"
+						class="instagram"><i class="fab fa-instagram"></i></a></li>
+			</ul>
+		</div>
+	</aside>
 
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+	<footer id="footer">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-12 col-sm-6 text-center">
+					<ul class="footer-list">
+						<li><a href="tel: 12 3456 7890" class="footer-link">Phone number: 12 4567 7890</li>
+						<li><a href="contact.html" class="footer-link">Send Me a Message</a></li>
+					</ul>
+				</div>
+				<div class="col-12 col-sm-6 text-center">
+					<ul class="footer-list">
+						<li><a href="donate.html" class="footer-link">Donate</a></li>
+						<li><a href="map.html" class="footer-link">Map</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
 
-    <script type="module" src="assets/js/homepage.js"></script>
+		<div class="d-block d-sm-none">
+			<hr>
+
+			<!--Footer Social Media Icons-->
+
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-12">
+						<ul class="social-media-icons-footer">
+							<li class="facebook-footer"><a href="http://www.facebook.com"
+									target="_blank"><i class="fab fa-facebook"></i></a></li>
+							<li class="twitter-footer"><a href="http://www.twitter.com"
+									target="_blank"><i class="fab fa-twitter"></i></a></li>
+							<li class="youtube-footer"><a href="http://www.youtube.com"
+									target="_blank"><i class="fab fa-youtube"></i></a></li>
+							<li class="instagram-footer"><a href="http://www.instagram.com"
+									target="_blank"><i class="fab fa-instagram"></i></a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
+
+
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+	</script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
+	</script>
+
+	<script type="module" src="assets/js/homepage.js"></script>
 </body>
 
 </html>
