Improved some codes and corrected some of the text in the README.md file.

--- a/donate.html
+++ b/donate.html
@@ -97,16 +97,17 @@
 
         <!--Calculator-->
         <section id="calculator-wrapper">
-        <div class="calculatorSection">
-            <div class="justify-content-sm-center" id="calculatorSectionHeader">
-                <div class="col-12 text-center donatePageTextColor calcTextBG">
-                    <h5>Click Here To Move and Calculate How Much You Would Like to Donate</h5>
-                </div>
-                <div class="container">
+            <div class="calculatorSection container">
+                <div class="justify-content-sm-center row">
+                    <div class="col-12 text-center donatePageTextColor calcTextBG" id="calculatorSectionHeader">
+                        <h5>Click Here To Move and Calculate How Much You Would Like to Donate</h5>
+                    </div>
+                
                     <form>
                         <input type="text" class="screen" />
                     </form>
-
+                </div>
+       
 
                     <div class="row">
                         <div class="col-12 text-center">
@@ -116,8 +117,6 @@
                                 <button type="button" class="calcBtn calcBtnStyle calcBtnGrey" data-num="1">1</button>
                                 <button type="button" class="calcBtn calcBtnStyle calcBtnGrey" data-num="2">2</button>
                                 <button type="button" class="calcBtn calcBtnStyle calcBtnYellow" data-num="+">+</button>
-
-
                             </div>
                         </div>
                     </div>
@@ -164,8 +163,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
 
         </section>
         <!--Charities for Africa and Asia-->
