Improved some of the JavaScript code to decrease the amount of lines in some files and worked on the README.md file.

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
 	</script>
 
-	<script type="module" src="assets/js/homepage.js"></script>
+	<script src="assets/js/homepage.js"></script>
 </body>
 
 </html>
