--- a/statistics.html
+++ b/statistics.html
@@ -86,10 +86,17 @@
 
 		<!--Short Notice about the Interactive Charts-->
 		<section>
-			<div class="container">
+			<div class="container row-flex" id="notice-wrap">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="closing-button-wrapper">
+                            <div id="closeX" class="closing-button">X</div>
+                        </div>
+                    </div>
+                </div>
 				<div class="row">
-					<div class="col-12 row-flex">
-						<p class="notice-text">Click on the bars in the first graph to compare the dispalyed data with
+					<div class="col-12">
+						<p class="notice-text">Click on the bars in the first graph to compare the displayed data with
 							the data in the charts below.</p>
 					</div>
 				</div>
