Improved some codes, worked on the README.me file and some of the JavaScript code in the homepage.js file is still being worked on.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<section class="section3 scroll-effect" id="textEffect2">
+						<section class="section scroll-effect" id="textEffect2">
 							<h2 class="header">The Poverty Trap</h2>
 							<p class="text2 ">When a country does not have a enough capital, i.e. machinary, tools and
 								buildings, people strive to produce goods and services. Therefore, their economic
@@ -134,7 +134,7 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-sm-12 mx-auto text-center">
-						<section class="section2 scroll-effect" id="textEffect4">
+						<section class="section scroll-effect" id="textEffect4">
 							<h2 class="headerGDP">
 								Lowest Economic Outputs
 							</h2>
@@ -162,7 +162,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-12">
-						<div class="textHP2 scroll-effect" id="textEffect5">
+						<div class="section scroll-effect" id="textEffect5">
 							<h2 class="header">Please Donate!</h2>
 							<p class="text">You could save someone, now!</p>
 							<a href="donate.html" class="btn btn-primary donateButtonStyleHP">Donate here</a>
