Refactored and cleaned up some code and worked on the README.md file.

--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
 		<!--Section 2: Poverty Trap-->
 
 		<section class="hpimg-4">
-			<div class="container-fluid">
+			<div class="container-fluid section">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<section class="section scroll-effect" id="textEffect2">
-							<h2 class="header">The Poverty Trap</h2>
+						<div class=" scroll-effect" id="textEffect2">
+							<h2 class="heading">The Poverty Trap</h2>
 							<p class="text2 ">When a country does not have a enough capital, i.e. machinary, tools and
 								buildings, people strive to produce goods and services. Therefore, their economic
 								development and growth decreases and it becomes difficult to gain the
@@ -100,7 +100,7 @@
 								you could change lives today by donating! Find more information, <a
 									href="statistics.html">here!</a>
 							</p>
-						</section>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -109,11 +109,11 @@
 		<!--Section 3: The Struggle for Food and Health Care-->
 
 		<section class="hpimg-2">
-			<div class="container-fluid">
+			<div class="container-fluid section">
 				<div class="row" id="textEffect3">
 					<div class="col-sm-12 text-center">
-						<section class="section scroll-effect">
-							<h2 class="header">The Struggle for Food and Health Care</h2>
+						<div class=" scroll-effect">
+							<h2 class="heading">The Struggle for Food and Health Care</h2>
 							<p class="text2">In some countries, a single plate of food can even cost up to around 70$ or
 								even about 200$. About 45% children, under the age of five, are caused to pass away, due
 								to malnutrition. In many countries, people live in slums,
@@ -122,7 +122,7 @@
                                 kinds of support! For statistics, please click <a href="statistics.html">here!</a>
                             </span>
 								<button id="readBtn1" class="readBtn">Read More</button></p>
-						</section>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -131,13 +131,11 @@
 		<!--Section 4: Lowest Economic Outputs-->
 
 		<section class="hpimg-3">
-			<div class="container-fluid">
+			<div class="container-fluid section">
 				<div class="row">
 					<div class="col-sm-12 mx-auto text-center">
-						<section class="section scroll-effect" id="textEffect4">
-							<h2 class="headerGDP">
-								Lowest Economic Outputs
-							</h2>
+						<div class=" scroll-effect" id="textEffect4">
+							<h2 class="headingGDP">Lowest Economic Outputs</h2>
 							<p class="textGDP">
 								The GDP per capital and GDP growth play huge roles in a country's economic status, as
 								they show measurements of a country's standard of living, how prosperous the citizens of
@@ -147,10 +145,10 @@
 								<button id="readBtn2" class="readBtn">Read More</button>
 							</p>
 
-							<blockquote class="MotherTeresaQuote text-center">
+							<p class="MotherTeresaQuote text-center">
 								"It is not how much we give, but how much love we put into giving." <br />- Mother Teresa
-                            </blockquote>
-						</section>
+                            </p>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -159,10 +157,10 @@
 		<!--Section 5: Please Donate-->
 
 		<section class="hpimg-5">
-			<div class="container">
+			<div class="container section">
 				<div class="row">
 					<div class="col-12">
-						<div class="section scroll-effect" id="textEffect5">
+						<div class=" scroll-effect" id="textEffect5">
 							<h2 class="header">Please Donate!</h2>
 							<p class="text">You could save someone, now!</p>
 							<a href="donate.html" class="btn btn-primary donateButtonStyleHP">Donate here</a>
