Deleted unnecessary files and wrote on the README.md file.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					<div class="row">
 						<div class="col-11 col-xl-8">
 							<div class="top-section textHP1 text-center">
-								<h1 class="underline header">Help People In Need</h1>
+								<h1>Help People In Need</h1>
 								<p class="text">Around 795 million people in the world do not have enough food, in order
 									to live a healthy and active life. However, you can help solving this problem by
 									donating to save lives and help to change a part of this world!
@@ -91,16 +91,14 @@
 			<div class="container-fluid section">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<div class=" scroll-effect" id="textEffect2">
-							<h2 class="heading">The Poverty Trap</h2>
-							<p class="text2 ">When a country does not have a enough capital, i.e. machinary, tools and
-								buildings, people strive to produce goods and services. Therefore, their economic
-								development and growth decreases and it becomes difficult to gain the
-								capital that they require. As a result, they get trapped into a poverty cycle. However,
-								you could change lives today by donating! Find more information, <a
-									href="statistics.html">here!</a>
-							</p>
-						</div>
+						<h2>The Poverty Trap</h2>
+						<p class="text ">When a country does not have a enough capital, i.e. machinary, tools and
+							buildings, people strive to produce goods and services. Therefore, their economic
+							development and growth decreases and it becomes difficult to gain the
+							capital that they require. As a result, they get trapped into a poverty cycle. However,
+							you could change lives today by donating! Find more information, <a
+								href="statistics.html">here!</a>
+						</p>
 					</div>
 				</div>
 			</div>
@@ -110,19 +108,17 @@
 
 		<section class="hpimg-2">
 			<div class="container-fluid section">
-				<div class="row" id="textEffect3">
+				<div class="row">
 					<div class="col-sm-12 text-center">
-						<div class=" scroll-effect">
-							<h2 class="heading">The Struggle for Food and Health Care</h2>
-							<p class="text2">In some countries, a single plate of food can even cost up to around 70$ or
-								even about 200$. About 45% children, under the age of five, are caused to pass away, due
-								to malnutrition. In many countries, people live in slums,
-								ran away, suffer mentally and physically from wars, got affected by natural disasters,
-								etc. <span id="dots1" class="dots">...</span><span id="more1" class="more">So, they do not have much access to nutritions, medications or shelter and require various
+						<h2>The Struggle for Food and Health Care</h2>
+						<p class="text">In some countries, a single plate of food can even cost up to around 70$ or
+							even about 200$. About 45% children, under the age of five, are caused to pass away, due
+							to malnutrition. In many countries, people live in slums,
+							ran away, suffer mentally and physically from wars, got affected by natural disasters,
+							etc. <span id="dots1" class="dots">...</span><span id="more1" class="more">So, they do not have much access to nutritions, medications or shelter and require various
                                 kinds of support! For statistics, please click <a href="statistics.html">here!</a>
                             </span>
-								<button id="readBtn1" class="readBtn">Read More</button></p>
-						</div>
+							<button id="readBtn1" class="readBtn">Read More</button></p>
 					</div>
 				</div>
 			</div>
@@ -134,9 +130,8 @@
 			<div class="container-fluid section">
 				<div class="row">
 					<div class="col-sm-12 mx-auto text-center">
-						<div class=" scroll-effect" id="textEffect4">
-							<h2 class="headingGDP">Lowest Economic Outputs</h2>
-							<p class="textGDP">
+							<h2>Lowest Economic Outputs</h2>
+							<p class="text">
 								The GDP per capital and GDP growth play huge roles in a country's economic status, as
 								they show measurements of a country's standard of living, how prosperous the citizens of
 								a country feel, and how fast a country's economy is growing.
@@ -160,8 +155,8 @@
 			<div class="container section">
 				<div class="row">
 					<div class="col-12">
-						<div class=" scroll-effect" id="textEffect5">
-							<h2 class="header">Please Donate!</h2>
+						<div class=" scroll-effect">
+							<h2>Please Donate!</h2>
 							<p class="text">You could save someone, now!</p>
 							<a href="donate.html" class="btn btn-primary donateButtonStyleHP">Donate here</a>
 						</div>
